@@ -50,6 +50,10 @@ JEDIT 4.1 VERSION HISTORY
   highlighting' is on
 - Open buffers are shown with a different icon in the file system
   browser
+- Added a few extra key bindings for Windows users:
+  S+DELETE bound to cut
+  C+INSERT bound to copy
+  S+INSERT bound to paste
 
 + Bug Fixes
 
